welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: value =< is not a member of Int
  if ((num%10)=<2){
              ^